Added workbench techreport, Flux Technical Note FTN-2006-01.

--- a/www/pubs.html
+++ b/www/pubs.html
@@ -19,7 +19,7 @@
 -->
 
 <h3>Documents:</h3>
-<!-- Some of these are newly-posted and thus so flagged, though not particularly new. -->
+<!-- Some of these are newly posted and thus so flagged, though not particularly new. -->
 <ul>
 <li> <img src="/new.gif" alt="&lt;NEW&gt;">
         <cite><a
@@ -29,6 +29,16 @@
 	Leigh Stoller, Rob Ricci, Jay Lepreau.
         To appear in Proceedings of 
 	<a href="http://www.ieee-infocom.org/2006/">IEEE INFOCOM 2006</a>, April&nbsp;2006.
+       <p>
+
+<li><img src="/new.gif" alt="&lt;NEW&gt;">
+        <cite><a
+        href="http://www.cs.utah.edu/flux/papers/workflow-ftn2006-01-base.html">Integrated
+        Scientific Workflow Management for the Emulab Network
+        Testbed</a></cite>.
+        Eric Eide, Leigh Stoller, Tim Stack, Juliana Freire, and Jay Lepreau.
+	Flux Technical Note FTN&ndash;2006&ndash;01, University of Utah,
+	January&nbsp;31, 2006.
        <p>
 
 <li> <img src="/new.gif" alt="&lt;NEW&gt;">
