Add my assign slides, requested by Jay

--- a/www/pubs.html
+++ b/www/pubs.html
@@ -21,6 +21,15 @@
 <h3>Documents:</h3>
 <!-- Some of these are newly posted and thus so flagged, though not particularly new. -->
 <ul>
+
+<li><img src="/new.gif" alt="&lt;NEW&gt;">
+<cite><a href="http://www.flux.utah.edu/users/ricci/slides/assign-informs">
+        A Mapper For Managing Shared, Virtualized Computing and Network
+        Resources</cite></a>.
+Robert Ricci's talk at the INFORMS Annual Meeting, San Francisco, CA, November, 2005
+    (posted Feb 24, 2006).
+    <p>
+
 <li><img src="/new.gif" alt="&lt;NEW&gt;">
     <cite><a href="http://www.cs.utah.edu/flux/testbed-docs/emulab-dev-jan06.ppt">
     Emulab: Recent Work, Ongoing Work</cite></a>.
