--- a/www/pubs.html
+++ b/www/pubs.html
@@ -55,13 +55,13 @@ Robert Ricci's talk at the INFORMS Annual Meeting, San Francisco, CA, November, 
 
 <li><img src="/new.gif" alt="&lt;NEW&gt;">
         <cite><a
-        href="http://www.cs.utah.edu/flux/papers/workflow-usenix06.html">
+        href="http://www.cs.utah.edu/flux/papers/workflow-usenix06-base.html">
         Integrated Scientific Workflow Management for the Emulab Network Testbed
         </a></cite>.
         Eric Eide, Leigh Stoller, Tim Stack, Juliana Freire, Jay Lepreau.
         To appear as a short paper in the
-        <a href = "http://www.usenix.org/events/usenix06/">Usenix Annual Technical Conference</a>,
-        June 2006.
+        <a href = "http://www.usenix.org/events/usenix06/">USENIX Annual Technical Conference</a>,
+        May-June&nbsp;2006.
        <p>
 
 <li> <img src="/new.gif" alt="&lt;NEW&gt;">
