--- a/www/otheremulabs.html
+++ b/www/otheremulabs.html
@@ -128,6 +128,14 @@
   <td class='paddedcell2'>For research; available to outside researchers</td>
 </tr>
 
+<tr>
+  <td class='paddedcell2' valign='center'><a
+  href='http://emulab.calvin.edu/'><font
+  size='+1'>Calvin College</font></a></td>
+  <td class='paddedcell2'><b>Under construction</b></td>
+  <td class='paddedcell2'>For interal researchand teaching</td>
+</tr>
+
 </table>
 </center>
 
