Ooops, apparently we don't bold the status of testbeds that are not available to the public yet.

--- a/www/otheremulabs.html
+++ b/www/otheremulabs.html
@@ -132,7 +132,7 @@
   <td class='paddedcell2' valign='center'><a
   href='http://emulab.calvin.edu/'><font
   size='+1'>Calvin College</font></a></td>
-  <td class='paddedcell2'><b>Under construction</b></td>
+  <td class='paddedcell2'>Under construction</td>
   <td class='paddedcell2'>For interal researchand teaching</td>
 </tr>
 
