--- a/www/pubs.html
+++ b/www/pubs.html
@@ -59,9 +59,10 @@ Robert Ricci's talk at the INFORMS Annual Meeting, San Francisco, CA, November, 
         Integrated Scientific Workflow Management for the Emulab Network Testbed
         </a></cite>.
         Eric Eide, Leigh Stoller, Tim Stack, Juliana Freire, Jay Lepreau.
-        To appear as a short paper in the
-        <a href = "http://www.usenix.org/events/usenix06/">USENIX Annual Technical Conference</a>,
-        May-June&nbsp;2006.
+        In Proceedings of the
+        <a href="http://www.usenix.org/events/usenix06/">2006 USENIX Annual
+          Technical Conference</a>,
+        pages&nbsp;363-368, Boston,&nbsp;MA, May-June&nbsp;2006.  Short paper.
        <p>
 
 <li> <img src="/new.gif" alt="&lt;NEW&gt;">
@@ -70,7 +71,7 @@ Robert Ricci's talk at the INFORMS Annual Meeting, San Francisco, CA, November, 
         Mobile Emulab: A Robotic Wireless and Sensor Network Testbed</a></cite>.
         David Johnson, Tim Stack, Russ Fish, Dan Flickinger, 
 	Leigh Stoller, Rob Ricci, Jay Lepreau.
-        To appear in Proceedings of 
+        In Proceedings of 
 	<a href="http://www.ieee-infocom.org/2006/">IEEE INFOCOM 2006</a>, April&nbsp;2006.
        <p>
 
