--- a/www/copyright-contrib.html
+++ b/www/copyright-contrib.html
@@ -1,15 +1,15 @@
 <!--
    EMULAB-COPYRIGHT
-   Copyright (c) 2000-2004 University of Utah and the Flux Group.
+   Copyright (c) 2000-2004, 2006 University of Utah and the Flux Group.
    All rights reserved.
   -->
 <p>
 <center><b>Copyright Notice</b></center>
 <br>
 
-Copyright &copy @SITEDATES@, @SITECOPYRIGHT@
+Copyright &copy; @SITEDATES@, @SITECOPYRIGHT@
 
-Copyright &copy 2000-2004, the University of Utah and the Flux Research
+Copyright &copy; 2000-2006, the University of Utah and the Flux Research
 Group.  ALL RIGHTS RESERVED.
 
 This site is operated by @SITENAME@ and is based on software developed and
