--- a/www/copyright.html
+++ b/www/copyright.html
@@ -1,6 +1,6 @@
 <!--
    EMULAB-COPYRIGHT
-   Copyright (c) 2000-2004 University of Utah and the Flux Group.
+   Copyright (c) 2000-2004, 2006 University of Utah and the Flux Group.
    All rights reserved.
   -->
 <p>
@@ -13,6 +13,6 @@ site, including the text, site design, logos, graphics, icons,
 images, audio and video clips,
 as well as the selection, assembly and arrangement thereof,
 are the sole property of the University of Utah and the Flux Research
-Group, Copyright &copy 2000-2004, ALL RIGHTS RESERVED.
+Group, Copyright &copy; 2000-2006, ALL RIGHTS RESERVED.
 All software used on the site is the sole property of
 University of Utah and the Flux Research Group.
