Added and updated several other emulabs. Marked them as 'new'
Standardized way in which domain names for other emulab are given

Re-formatted poorly formatted entries

Re-order to put higher-impact emulabs first

--- a/www/otheremulabs.html
+++ b/www/otheremulabs.html
@@ -17,65 +17,160 @@
 </tr>
 
 <tr>
-  <td class='paddedcell2' valign='center'><a 
-  href='http://www.cc.gatech.edu'><font
-  size='+1'>Georgia Tech</font></a><br /><a 
-  href='http://www.netlab.cc.gatech.edu'
-  >www.netlab.cc.gatech.edu</a></td>
+    <td class='paddedcell2' valign='center'>
+        <a href='http://www.isi.edu/deter/'>
+            <font size='+1'>DETER at USC ISI</font>
+        </a>
+        <br />
+        <a href="http://isi.deterlab.net">isi.deterlab.net</a>
+    </td>
+    <td class='paddedcell2'><b>Open for security research</b></td>
+    <td class='paddedcell2'>200 PCs, plus 100 nodes at Berkeley</td>
+</tr>
+
+<tr>
+    <td class='paddedcell2' valign='center'>
+        <a href='http://www.cs.berkeley.edu/'>
+            <font size='+1'>DETER at UC Berkeley</font>
+        </a>
+        <br />
+        <a href="http://www.deterlab.net">deterlab.net</a>
+    </td>
+    <td class='paddedcell2'><b>Access only via ISI DETER site</b></td>
+    <td class='paddedcell2'>A logical extension of the DETER testbed; 100 PCs</td>
+</tr>
+
+<tr>
+    <td class='paddedcell2' valign='center'>
+        <a href='http://www.wail.wisc.edu/'>
+            <font size='+1'>University of Wisconsin WAIL Lab</font>
+        </a>
+        <br />
+        <a href='http://schooner.wail.wisc.edu/'>schooner.wail.wisc.edu</a>
+    </td>
   <td class='paddedcell2'><b>Open to external researchers</b></td>
-  <td class='paddedcell2'>For teaching and research; 40 PCs.
-	Currently being rebuilt on a cluster of newer machines.</td>
+  <td class='paddedcell2'>Manages 100 PCs, Cisco routers,
+	and other devices will be available.</td>
 </tr>
 
 <tr>
-  <td class='paddedcell2' valign='center'><a 
-  href='http://www.uky.edu'><font
-  size='+1'>University of Kentucky</font></a><br /><a
-  href='http://uky.emulab.net'
-  >uky.emulab.net</a></td>
-  <td class='paddedcell2'><b>Open to external researchers</b></td>
-  <td class='paddedcell2'>Primarily for teaching; some research,
-      available to outside researchers; 48 PCs</td>
+    <td class='paddedcell2' valign='center'>
+        <img src="new.gif" />
+        <a href='http://www.sparta.com/'>
+            <font size='+1'>Sparta</font>
+        </a>
+    </td>
+    <td class='paddedcell2'><b>Two production Emulabs</b></td>
+    <td class='paddedcell2'>For interal use only</td>
 </tr>
 
 <tr>
-  <td class='paddedcell2' valign='center'><a 
-  href='http://www.cs.utah.edu/'><font
-  size='+1'>University of Utah</font></a><br />
-  <a href='http://www.emulab.net'
-  >www.emulab.net</a></td>
-  <td class='paddedcell2'><b>Open for external research and teaching</b></td>
-  <td class='paddedcell2'>The original Emulab, home of most Emulab
-      software development.  Used primarily by external
-      researchers. 178 PCs, 8 IXPs, 40 wide-area nodes, 27 802.11 wireless nodes (+ 20 soon),
-      frontend to PlanetLab.</td>
+    <td class='paddedcell2' valign='center'>
+        <a href='http://www.aero.org/'>
+            <font size='+1'>The Aerospace Corporation</font>
+        </a>
+    </td>
+    <td class='paddedcell2'><b>Two Emulabs in production use</b></td>
+    <td class='paddedcell2'>For research.  64 nodes today.</td>
 </tr>
 
 <tr>
-  <td class='paddedcell2' valign='center'><a
-  href='http://www.schooner.wail.wisc.edu/'><font
-  size='+1'>University of Wisconsin,<br> WAIL Lab</font></a></td>
-  <td class='paddedcell2'><b>Open to external researchers</b></td>
-  <td class='paddedcell2'>Manages 64 PCs.  Later, Cisco routers,
-	other devices, and more PCs will be available.</td>
+    <td class='paddedcell2' valign='center'>
+        <img src="new.gif" />
+        <a href='http://www.uniten.edu.my/'>
+            <font size='+1'>Universiti Tenaga Nasional, Malaysia</font>
+        </a>
+        <br />
+        <a href="http://netbed.uniten.edu.my">netbed.uniten.edu.my</a>
+    </td>
+    <td class='paddedcell2'><b>In production use</b></td>
+    <td class='paddedcell2'>For research and teaching</td>
 </tr>
 
 <tr>
-  <td class='paddedcell2' valign='center'><a
-  href='http://www.isi.deterlab.net/'><font
-  size='+1'>USC ISI</font></a></td>
-  <td class='paddedcell2'><b>Open to
-	<a href = 'http://www.isi.edu/deter/'>DETER/EMIST</a> project members</b></td>
-  <td class='paddedcell2'>Used as a security testbed by ISI, NAI, UCB, UC Davis,
-  	Penn State, Purdue, and several other institutions; 72 PCs</td>
+    <td class='paddedcell2' valign='center'>
+        <a href='http://www.kreonet.net'>
+            <font size='+1'>
+                KISTI (Korea Institute of Science and Technology Information)
+                Supercomputing Center
+            </font>
+        </a>
+        <br />
+        <a href='http://www.emulab.kreonet.net/'>emulab.kreonet.net</a>
+    </td>
+    <td class='paddedcell2'><b>Open to external researchers</b></td>
+    <td class='paddedcell2'>For research; available to outside researchers</td>
 </tr>
 
 <tr>
-  <td class='paddedcell2' valign='center'><a
-  href='http://www.cs.berkeley.edu/'><font
-  size='+1'>UC Berkeley</font></a></td>
-  <td class='paddedcell2'><b>Access only via ISI DETER site</td>
-  <td class='paddedcell2'>A logical extension of the DETER testbed; 32 PCs</td>
+    <td class='paddedcell2' valign='center'>
+        <img src="new.gif" />
+        <a href='http://www.cs.ubc.ca'>
+            <font size='+1'>University of British Columbia</font>
+        </a>
+        <br />
+        <a href='http://boss.netbed.icics.ubc.ca/'>netbed.icics.ubc.ca</a>
+    </td>
+    <td class='paddedcell2'><b>In production use</b></td>
+    <td class='paddedcell2'>For research and teaching</td>
+</tr>
+
+
+<tr>
+    <td class='paddedcell2' valign='center'>
+        <a href='http://www.cc.gatech.edu'>
+            <font size='+1'>Georgia Tech</font>
+        </a>
+        <br />
+        <a href='http://www.netlab.cc.gatech.edu'>
+            netlab.cc.gatech.edu
+        </a>
+    </td>
+    <td class='paddedcell2'><b>Open to external researchers</b></td>
+    <td class='paddedcell2'>For teaching and research; 40 PCs.
+        Currently being rebuilt on a cluster of newer machines.</td>
+</tr>
+
+<tr>
+    <td class='paddedcell2' valign='center'>
+        <img src="new.gif" />
+        <a href='http://emulab.calvin.edu/'>
+            <font size='+1'>Calvin College</font>
+        </a>
+        <br />
+        <a href='http://www.cs.calvin.edu/'>emulab.calvin.edu</a>
+    </td>
+    <td class='paddedcell2'><b>In production</a></td>
+    <td class='paddedcell2'>For interal research and teaching</td>
+</tr>
+
+<tr>
+    <td class='paddedcell2' valign='center'>
+        <a href='http://www.uky.edu'>
+            <font size='+1'>University of Kentucky</font>
+        </a>
+        <br />
+        <a href='http://uky.emulab.net'>uky.emulab.net</a>
+    </td>
+    <td class='paddedcell2'><b>Open to external researchers</b></td>
+    <td class='paddedcell2'>Primarily for teaching; some research,
+        available to outside researchers; 48 PCs</td>
+</tr>
+
+<tr>
+    <td class='paddedcell2' valign='center'>
+        <a href='http://www.cs.utah.edu/'>
+            <font size='+1'>University of Utah</font>
+        </a>
+        <br />
+        <a href='http://emulab.net'>emulab.net</a>
+    </td>
+    <td class='paddedcell2'><b>Open for external research and teaching</b></td>
+    <td class='paddedcell2'>The original Emulab, home of most Emulab
+        software development.  Used primarily by external researchers.
+        350 PCs, 8 IXPs, 40 wide-area nodes, 27 802.11 wireless nodes (+ 20 soon),
+        frontend to PlanetLab.
+    </td>
 </tr>
 
 <!-- these guys seem only to be using Frisbee.
@@ -89,51 +184,56 @@
 -->
 
 <tr>
-  <td class='paddedcell2' valign='center'><a
-  href='http://www.aero.org/'><font
-  size='+1'>The Aerospace Corporation</font></a></td>
-  <td class='paddedcell2'><b>In production use</b></td>
-  <td class='paddedcell2'>For research.  10 nodes today, 32 on their way, 64 more next year.</td>
+    <td class='paddedcell2' valign='center'>
+        <img src="new.gif" />
+        <a href='http://www.afit.edu/'>
+            <font size='+1'>Air Force Institute of Technology</font>
+        </a>
+    </td>
+    <td class='paddedcell2'>Under construction</td>
+    <td class='paddedcell2'>For research and teaching</td>
 </tr>
 
 <tr>
-  <td class='paddedcell2' valign='center'><a
-  href='http://www.uniten.edu.my/'><font
-  size='+1'>Universiti Tenaga Nasional, Malaysia</font></a></td>
-  <td class='paddedcell2'>Partially up</td>
-  <td class='paddedcell2'>For research and teaching</td>
+    <td class='paddedcell2' valign='center'>
+        <img src="new.gif" />
+        <a href='http://www.nps.edu/'>
+            <font size='+1'>Naval Postgraduate School</font>
+        </a>
+    </td>
+    <td class='paddedcell2'>Under construction</td>
+    <td class='paddedcell2'>For research and teaching</td>
 </tr>
 
 <tr>
-  <td class='paddedcell2' valign='center'><a
-  href='http://www.cs.cornell.edu/'><font
-  size='+1'>Cornell University</font></a></td>
-  <td class='paddedcell2'>Under construction</td>
-  <td class='paddedcell2'>For research and teaching</td>
+    <td class='paddedcell2' valign='center'>
+        <img src="new.gif" />
+        <a href='http://www.cs.vanderbilt.edu/'>
+            <font size='+1'>Vanderbilt University</font>
+        </a>
+    </td>
+    <td class='paddedcell2'>Final stages of setup</td>
+    <td class='paddedcell2'>For research and teaching</td>
 </tr>
 
 <tr>
-  <td class='paddedcell2' valign='center'><a
-  href='http://www.cs.utexas.edu/'><font
-  size='+1'>University of Texas at Austin</font></a></td>
-  <td class='paddedcell2'>Under construction</td>
-  <td class='paddedcell2'>For research and teaching</td>
+    <td class='paddedcell2' valign='center'>
+        <a href='http://www.cs.cornell.edu/'>
+            <font size='+1'>Cornell University</font>
+        </a>
+    </td>
+    <td class='paddedcell2'>Under construction</td>
+    <td class='paddedcell2'>For research and teaching</td>
 </tr>
 
 <tr>
-  <td class='paddedcell2' valign='center'><a
-  href='http://www.emulab.kreonet.net/'><font
-  size='+1'>KISTI (Korea Institute of Science and Technology Information) Supercomputing Center</font></a></td>
-  <td class='paddedcell2'><b>Open to external researchers</b></td>
-  <td class='paddedcell2'>For research; available to outside researchers</td>
-</tr>
-
-<tr>
-  <td class='paddedcell2' valign='center'><a
-  href='http://emulab.calvin.edu/'><font
-  size='+1'>Calvin College</font></a></td>
-  <td class='paddedcell2'>Under construction</td>
-  <td class='paddedcell2'>For interal researchand teaching</td>
+    <td class='paddedcell2' valign='center'>
+        <a href='http://www.cs.utexas.edu/'>
+            <font size='+1'>University of Texas at Austin</font>
+        </a>
+    </td>
+    <td class='paddedcell2'>Under construction</td>
+    <td class='paddedcell2'>For research and teaching</td>
 </tr>
 
 </table>
