Added reference to Eide et al., FTN-2006-03.

--- a/www/pubs.html
+++ b/www/pubs.html
@@ -25,6 +25,17 @@
 <li>
      <img src="/new.gif" alt="&lt;NEW&gt;">
      <cite><a 
+        href="http://www.cs.utah.edu/flux/papers/workbench-ftn2006-03-base.html">
+	An Experimentation Workbench for Replayable Networking
+        Research</a></cite>.
+     Eric Eide, Leigh Stoller, and Jay Lepreau.
+     Flux Technical Note FTN-2006-03, University of Utah,
+     December&nbsp;2006.
+     <p>
+
+<li>
+     <img src="/new.gif" alt="&lt;NEW&gt;">
+     <cite><a 
         href="http://www.cs.utah.edu/flux/papers/flexlab-hotnets06-base.html">
 	Flexlab: A Realistic, Controlled, and Friendly Environment
 	for Evaluating Networked Systems</a></cite>.
