Added entry for the workbench NSDI 2007 paper.

--- a/www/pubs.html
+++ b/www/pubs.html
@@ -1,6 +1,6 @@
 <!--
    EMULAB-COPYRIGHT
-   Copyright (c) 2000-2006 University of Utah and the Flux Group.
+   Copyright (c) 2000-2007 University of Utah and the Flux Group.
    All rights reserved.
   -->
 <!-- Nothing here is published by ACM et al; no need to include this yet.
@@ -21,6 +21,20 @@
 <h3>Documents:</h3>
 <!-- Some of these are newly posted and thus so flagged, though not particularly new. -->
 <ul>
+
+<li>
+     <img src="/new.gif" alt="&lt;NEW&gt;">
+     <cite><a 
+        href="http://www.cs.utah.edu/flux/papers/workbench-nsdi07-base.html">
+	An Experimentation Workbench for Replayable Networking
+        Research</a></cite>.
+     Eric Eide, Leigh Stoller, and Jay Lepreau.
+     In Proceedings of the
+        <a href="http://www.usenix.org/events/nsdi07/">Fourth USENIX Symposium
+        on Networked Systems Design and Implementation (NSDI)</a>, 
+     <!-- pages&nbsp;XXX-XXX, -->
+     Cambridge,&nbsp;MA, April&nbsp;2007.
+     <p>
 
 <li>
      <img src="/new.gif" alt="&lt;NEW&gt;">
@@ -53,9 +67,8 @@
      Eric Eide, Leigh Stoller, and Jay Lepreau.
      Flux Technical Note FTN-2006-03, University of Utah,
      December&nbsp;2006.
-     <br><img src="/new.gif" alt="&lt;NEW&gt;">
-     <b>Revised version to appear at
-	<a href = "http://www.usenix.org/nsdi07/">NSDI&nbsp;2007</a>.</b>
+     Revised version version appears in NSDI&nbsp;2007
+	(linked above); please read and cite that paper instead.
      <p>
 
 <li>
