Added page numbers for our NSDI '07 papers.

--- a/www/pubs.html
+++ b/www/pubs.html
@@ -32,7 +32,7 @@
      In Proceedings of the
         <a href="http://www.usenix.org/events/nsdi07/">Fourth USENIX Symposium
         on Networked Systems Design and Implementation (NSDI&nbsp;2007)</a>, 
-     <!-- pages&nbsp;XXX-XXX, -->
+     pages&nbsp;201-214,
      Cambridge,&nbsp;MA, April&nbsp;2007.
      <p>
 
@@ -46,7 +46,7 @@
      In Proceedings of the
         <a href="http://www.usenix.org/events/nsdi07/">Fourth USENIX Symposium
         on Networked Systems Design and Implementation (NSDI&nbsp;2007)</a>, 
-     <!-- pages&nbsp;XXX-XXX, -->
+     pages&nbsp;215-228,
      Cambridge,&nbsp;MA, April&nbsp;2007.
      <p>
 
@@ -92,8 +92,8 @@
 <li>
      <cite><a 
 	href="http://www.cs.utah.edu/flux/papers/elabfinger-worlds06-base.html">
-	Towards Fingerpointing in the Emulab Dynamic Distributed System
-	</a></cite>.
+	Towards Fingerpointing in the Emulab Dynamic Distributed
+        System</a></cite>.
 	Michael P. Kasick, Priya Narasimhan, Kevin Atkinson, Jay Lepreau.
 	<cite><a href = "http://www.usenix.org/events/worlds06/">
 	Third USENIX Workshop on Real, Large Distributed Systems (WORLDS&nbsp;'06)</a></cite>,
