Fix URL for Schooner

--- a/www/otheremulabs.html
+++ b/www/otheremulabs.html
@@ -46,7 +46,7 @@
             <font size='+1'>University of Wisconsin WAIL Lab</font>
         </a>
         <br />
-        <a href='http://schooner.wail.wisc.edu/'>schooner.wail.wisc.edu</a>
+        <a href='http://www.schooner.wail.wisc.edu/'>schooner.wail.wisc.edu</a>
     </td>
   <td class='paddedcell2'><b>Open to external researchers</b></td>
   <td class='paddedcell2'>Manages 100 PCs, Cisco routers,
