Added Flickinger and Minor, ICRA 2007.
I don't have a hyperlink to the actual paper (except into the IEEE DL), but at
least now the paper is "in the list."

--- a/www/pubs.html
+++ b/www/pubs.html
@@ -1,6 +1,6 @@
 <!--
    EMULAB-COPYRIGHT
-   Copyright (c) 2000-2007 University of Utah and the Flux Group.
+   Copyright (c) 2000-2008 University of Utah and the Flux Group.
    All rights reserved.
   -->
 <!-- Nothing here is published by ACM et al; no need to include this yet.
@@ -48,6 +48,18 @@
         on Networked Systems Design and Implementation (NSDI&nbsp;2007)</a>, 
      pages&nbsp;215-228,
      Cambridge,&nbsp;MA, April&nbsp;2007.
+     <p>
+
+<li>
+     <img src="/new.gif" alt="&lt;NEW&gt;">
+     <cite>Remote Low Frequency State Feedback Kinematic Motion Control for
+        Mobile Robot Trajectory Tracking</cite>.
+     Daniel Montrallo Flickinger and Mark&nbsp;A. Minor.
+     In Proceedings of the
+        <a href="http://www.icra07.org/">2007 IEEE International Conference on
+        Robotics and Automation (ICRA&nbsp;2007)</a>, 
+     pages&nbsp;3502-3507,
+     Rome,&nbsp;Italy, April&nbsp;2007.
      <p>
 
 <li>
