Added link for Usenix large-scale virtualization paper and update date for pubs menu item.

--- a/www/pubs.html
+++ b/www/pubs.html
@@ -24,10 +24,9 @@
 
 <li>
      <img src="/new.gif" alt="&lt;NEW&gt;">
-     <cite><!-- <a 
-        href="http://www.cs.utah.edu/flux/papers/virt-usenix08-base.html"> -->
-	Large-scale Virtualization in the Emulab Network Testbed
-	<!-- </a> --> </cite>.
+     <cite><a 
+        href="http://www.cs.utah.edu/flux/papers/virt-usenix08-base.html">
+	Large-scale Virtualization in the Emulab Network Testbed</a></cite>.
 	Mike Hibler, Robert Ricci, Leigh Stoller, Jonathon Duerig,
 	Shashi Guruprasad, Tim Stack, Kirk Webb, and Jay Lepreau.
      To appear in Proceedings of the
