Added EuroSys 2009 paper by Burtsev et al. Fixed page numbers of some recent publications.

--- a/www/pubs.html
+++ b/www/pubs.html
@@ -24,6 +24,21 @@
 <li>
      <img src="/new.gif" alt="&lt;NEW&gt;">
      <cite><a 
+        href="http://www.cs.utah.edu/flux/papers/checkpoint-eurosys09-base.html">
+	Transparent Checkpoints of Closed Distributed Systems in
+	Emulab.</a></cite>
+     Anton Burtsev, Prashanth Radhakrishnan, Mike Hibler, and Jay Lepreau.
+     In Proceedings of the
+	<a href="http://eurosys2009.informatik.uni-erlangen.de/">Fourth ACM
+	SIGOPS/EuroSys European Conference on Computer Systems</a>,
+     <!-- pages&nbsp;NNN-NNN, -->
+     Nuremberg, Germany,
+     April&nbsp;2009.
+     <p>
+
+<li>
+     <img src="/new.gif" alt="&lt;NEW&gt;">
+     <cite><a 
         href="http://www.cs.utah.edu/flux/papers/p-radhakrishnan-base.html">
 	Stateful-Swapping in the Emulab Network Testbed</a></cite>.
 	Prashanth Radhakrishnan.  Master's Thesis, August 2008.
@@ -50,7 +65,7 @@
      Proceedings of the
         <a href="http://www.usenix.org/events/usenix08/">2008 USENIX Annual
           Technical Conference</a>,
-     <!-- pages&nbsp;201-214, -->
+     pages&nbsp;113-128,
      Boston,&nbsp;MA, June&nbsp;2008.
      <p>
 
@@ -63,7 +78,7 @@
      Proceedings of the
         <a href="http://pam2008.cs.wpi.edu/">Ninth Passive and Active Measurement Conference
           (PAM&nbsp;2008)</a>, 
-     <!-- pages&nbsp;201-214, -->
+     pages&nbsp;102-111,
      Cleveland,&nbsp;OH, April&nbsp;2008.
      <p>
 
