--- a/www/pubs.html
+++ b/www/pubs.html
@@ -24,9 +24,23 @@
 <li>
      <img src="/new.gif" alt="&lt;NEW&gt;">
      <cite><a 
+        href="http://www.cs.utah.edu/flux/papers/ipathemu-nsdi09-base.html">
+	Modeling and Emulation of Internet Paths</a></cite>.
+     Pramod Sanaga, Jonathon Duerig, Robert Ricci, and Jay Lepreau.
+     In Proceedings of the
+	<a href="http://www.usenix.org/events/nsdi09/">Sixth USENIX Symposium
+        on Networked Systems Design and Implementation&nbsp;(NSDI)</a>,
+     <!-- pages&nbsp;NNN-NNN, -->
+     Boston,&nbsp;MA,
+     April&nbsp;2009.
+     <p>
+
+<li>
+     <img src="/new.gif" alt="&lt;NEW&gt;">
+     <cite><a 
         href="http://www.cs.utah.edu/flux/papers/checkpoint-eurosys09-base.html">
 	Transparent Checkpoints of Closed Distributed Systems in
-	Emulab.</a></cite>
+	Emulab</a></cite>.
      Anton Burtsev, Prashanth Radhakrishnan, Mike Hibler, and Jay Lepreau.
      In Proceedings of the
 	<a href="http://eurosys2009.informatik.uni-erlangen.de/">Fourth ACM
@@ -50,7 +64,7 @@
         href="http://www.cs.utah.edu/flux/papers/frisbeesec-cset08-base.html">
 	Securing the Frisbee Multicast Disk Loader</a></cite>.
 	Robert Ricci and Jonathon Duerig.
-     Proceedings of the
+     In Proceedings of the
         <a href="http://www.usenix.org/events/usenix08/">2008 Workshop on
 	  Cyber Security Experimentation and Test</a>,
      San&nbsp;Jose,&nbsp;CA, July&nbsp;2008.
@@ -62,7 +76,7 @@
 	Large-scale Virtualization in the Emulab Network Testbed</a></cite>.
 	Mike Hibler, Robert Ricci, Leigh Stoller, Jonathon Duerig,
 	Shashi Guruprasad, Tim Stack, Kirk Webb, and Jay Lepreau.
-     Proceedings of the
+     In Proceedings of the
         <a href="http://www.usenix.org/events/usenix08/">2008 USENIX Annual
           Technical Conference</a>,
      pages&nbsp;113-128,
@@ -75,7 +89,7 @@
 	Towards a High Quality Path-oriented Network Measurement and Storage 
 	System</a></cite>.
 	David Johnson, Daniel Gebhardt, and Jay Lepreau.
-     Proceedings of the
+     In Proceedings of the
         <a href="http://pam2008.cs.wpi.edu/">Ninth Passive and Active Measurement Conference
           (PAM&nbsp;2008)</a>, 
      pages&nbsp;102-111,
