--- a/www/pubs.html
+++ b/www/pubs.html
@@ -55,7 +55,7 @@
      <cite><a 
         href="http://www.cs.utah.edu/flux/papers/p-radhakrishnan-base.html">
 	Stateful-Swapping in the Emulab Network Testbed</a></cite>.
-	Prashanth Radhakrishnan.  Master's Thesis, August 2008.
+	Prashanth Radhakrishnan.  Master's Thesis, University of Utah, August&nbsp;2008.
 	<p>
 
 <li>
@@ -154,7 +154,7 @@
 	An Experimentation Workbench for Replayable Networking
         Research</a></cite>.
      Eric Eide, Leigh Stoller, and Jay Lepreau.
-     Flux Technical Note FTN-2006-03, University of Utah,
+     Flux Technical Note FTN&ndash;2006&ndash;03, University of Utah,
      December&nbsp;2006.
      Revised version version appears in NSDI&nbsp;2007
 	(linked above); please read and cite that paper instead.
@@ -195,6 +195,16 @@
      <p>
 
 <li>
+    <cite><a href="http://www.cs.utah.edu/flux/papers/ipassign-ftn2006-02-base.html">Automatic
+      IP Address Assignment on Network Topologies</a>. 
+    Jonathon Duerig, Robert Ricci, John Byers, and Jay Lepreau. 
+    Flux Technical Note FTN&ndash;2006&ndash;02, University of Utah, 
+    February&nbsp;2006. 
+    Supercedes 
+      <a href="http://www.cs.utah.edu/flux/papers/ipassign-ftn2005-04-base.html">FTN&ndash;2005&ndash;04</a>.
+    <p> 
+
+<li>
     <cite><a href="http://www.cs.utah.edu/flux/testbed-docs/assign-informs05/">
         A Mapper For Managing Shared, Virtualized Computing and Network
         Resources</cite></a>.
@@ -217,11 +227,11 @@ Robert Ricci's talk at the INFORMS Annual Meeting, San Francisco, CA, November, 
         href="http://www.cs.utah.edu/flux/papers/workflow-usenix06-base.html">
         Integrated Scientific Workflow Management for the Emulab Network Testbed
         </a></cite>.
-        Eric Eide, Leigh Stoller, Tim Stack, Juliana Freire, Jay Lepreau.
+        Eric Eide, Leigh Stoller, Tim Stack, Juliana Freire, and Jay Lepreau.
         In Proceedings of the
         <a href="http://www.usenix.org/events/usenix06/">2006 USENIX Annual
           Technical Conference</a>,
-        pages&nbsp;363-368, Boston,&nbsp;MA, May-June&nbsp;2006.  Short paper.
+        pages&nbsp;363&ndash;368, Boston,&nbsp;MA, May&ndash;June&nbsp;2006.  Short paper.
        <p>
 
 <li>
@@ -246,15 +256,18 @@ Robert Ricci's talk at the INFORMS Annual Meeting, San Francisco, CA, November, 
         href="http://www.cs.utah.edu/flux/papers/whol-ftn-draft1.pdf">
 	Whack-on-LAN: Inexpensive Remote PC Reset</a></cite>.
      Grant Ayers, Kirk Webb, Mike Hibler and Jay Lepreau.
-     Flux Technical Note FTN-2005-05, University of Utah,
+     Flux Technical Note FTN&ndash;2005&ndash;05, University of Utah,
      December&nbsp;2005.
      <p>
 
-<li>	<cite><a href="http://www.cs.utah.edu/flux/papers/ipassign-ftn2005-04-base.html">
+<li>
+	<cite><a href="http://www.cs.utah.edu/flux/papers/ipassign-ftn2005-04-base.html">
 	Optimizing IP Address Assignment on Network Topologies</a></cite>.
-	Jonathon Duerig, Robert Ricci, John Byers, Jay Lepreau.
-	University of Utah Flux Group Technical Note 2005-04,
+	Jonathon Duerig, Robert Ricci, John Byers, and Jay Lepreau.
+	Flux Technical Note FTN&ndash;2005&ndash;04, University of Utah,
 	July&nbsp;2005.
+	Superceded by 
+	  <a href="http://www.cs.utah.edu/flux/papers/ipassign-ftn2006-02-base.html">FTN&ndash;2006&ndash;02</a>.
        <p>
 
 <li>	<cite><a href="http://www.cs.utah.edu/flux/papers/truemobile-ftn2005-02.pdf">
@@ -267,19 +280,19 @@ Robert Ricci's talk at the INFORMS Annual Meeting, San Francisco, CA, November, 
 
 <li>	<cite><a href = "http://www.cs.utah.edu/flux/papers/guruprasad-thesis-base.html">
 	Issues in Integrated Network Experimentation using Simulation and Emulation</a></cite>.
-	Shashikiran B. Guruprasad.  Master's Thesis, March/August 2005.
+	Shashikiran B. Guruprasad.  Master's Thesis, University of Utah, August&nbsp;2005.
 	<p>
 
 <li>	<cite><a href="http://www.cs.utah.edu/flux/papers/simem-tridentcom05a.pdf">
 	Integrated Network Experimentation using Simulation and Emulation</a></cite>.
-	Shashi Guruprasad, Rob Ricci, Jay Lepreau.
+	Shashi Guruprasad, Rob Ricci, and Jay Lepreau.
 	In Proceedings of TridentCom&nbsp;2005, February&nbsp;2005.
        <p>
 
 <li>    <cite><a href="http://www.cs.utah.edu/flux/papers/portal-worlds04-base.html">
        Implementing the Emulab-PlanetLab Portal: Experiences and Lessons 
        Learned</a></cite>.
-       Kirk Webb, Mike Hibler, Robert Ricci, Austin Clements, Jay Lepreau.
+       Kirk Webb, Mike Hibler, Robert Ricci, Austin Clements, and Jay Lepreau.
        Appeared at <a href="http://www.usenix.org/publications/library/proceedings/worlds04/">WORLDS 2004</a>, 
        December 2004.
        <p>
@@ -287,14 +300,14 @@ Robert Ricci's talk at the INFORMS Annual Meeting, San Francisco, CA, November, 
 <li>	<cite><a href="http://www.cs.utah.edu/flux/papers/virt-ftn2004-02-base.html">
 	Feedback-directed Virtualization Techniques for Scalable Network Experimentation</a></cite>.
 	Mike Hibler, Robert Ricci, Leigh Stoller, Jonathon Duerig, Shashi Guruprasad,
-	Tim Stack, Kirk Webb, Jay Lepreau.
-	University of Utah Flux Group Technical Note 2004-02,
+	Tim Stack, Kirk Webb, and Jay Lepreau.
+	Flux Technical Note FTN&ndash;2004&ndash;02, University of Utah,
 	May&nbsp;2004.
        <p>
 
 <li>	<cite><a href = "http://www.cs.utah.edu/flux/papers/joglekar-thesis-base.html">
 	High Capacity Network Link Emulation Using Network Processors</a></cite>.
-	Abhijeet A. Joglekar.  Master's Thesis, January/May 2004.
+	Abhijeet A. Joglekar.  Master's Thesis, University of Utah, May&nbsp;2004.
 	<p>
 
 <li> <cite>Scaling Network Emulation with Multiplexed Virtual Resources</cite>,
