Updated info for Burtsev et al., EuroSys 2009.

--- a/www/pubs.html
+++ b/www/pubs.html
@@ -44,8 +44,8 @@
      Anton Burtsev, Prashanth Radhakrishnan, Mike Hibler, and Jay Lepreau.
      In Proceedings of the
 	<a href="http://eurosys2009.informatik.uni-erlangen.de/">Fourth ACM
-	SIGOPS/EuroSys European Conference on Computer Systems</a>,
-     <!-- pages&nbsp;NNN-NNN, -->
+	European Conference on Computer Systems</a>,
+     pages&nbsp;173-186,
      Nuremberg, Germany,
      April&nbsp;2009.
      <p>
