Add thumbnails of the three new visualizations to the right hand side of the front page.

--- a/www/index-mainsite.html
+++ b/www/index-mainsite.html
@@ -22,6 +22,31 @@
         environments:
 </p>
 
+<div class="thumb">
+    <a href="node_usage/">
+    <img src="thumbnail-usage.png" height="100" width= "100"/><br />
+    </a>
+    <a href="node_usage/">
+    Emulab usage graphs
+    </a>
+</div>
+<div class="thumb">
+    <a href="usermap/">
+    <img src="thumbnail-usermap.png" height="100" width= "100"/><br />
+    </a>
+    <a href="doc/docwrapper.php3?docname=users.html">
+    Emulab user map
+    </a>
+</div>
+<div class="thumb">
+    <a href="http://users.emulab.net/trac/emulab/wiki/OtherEmulabs">
+        <img src="thumbnail-siteloc.png" height="100" width= "100"/><br />
+    </a>
+    <a href="http://users.emulab.net/trac/emulab/wiki/OtherEmulabs">
+    Other Emulab sites
+    </a>
+</div>
+
 <dl class="envlist">
 
     <dt><a href="/wikidocs/wiki/Tutorial">Emulation</a></dt>
@@ -87,6 +112,3 @@ of the heterogeneity of the different resources.
    <img src='pix/pc3k-front-thumb.jpg'/></a>
 <a href='pix/pc3k-back.jpg'>
     <img src='pix/pc3k-back-thumb.jpg'/></a>
-
-
-
