--- a/www/pubs.html
+++ b/www/pubs.html
@@ -1,6 +1,6 @@
 <!--
    EMULAB-COPYRIGHT
-   Copyright (c) 2000-2009 University of Utah and the Flux Group.
+   Copyright (c) 2000-2010 University of Utah and the Flux Group.
    All rights reserved.
   -->
 <!-- Nothing here is published by ACM et al; no need to include this yet.
@@ -154,7 +154,7 @@
      Eric Eide, Leigh Stoller, and Jay Lepreau.
      Flux Technical Note FTN&ndash;2006&ndash;03, University of Utah,
      December&nbsp;2006.
-     Revised version version appears in NSDI&nbsp;2007
+     Revised version appears in NSDI&nbsp;2007
 	(linked above); please read and cite that paper instead.
      <p>
 
@@ -198,7 +198,7 @@
     Jonathon Duerig, Robert Ricci, John Byers, and Jay Lepreau. 
     Flux Technical Note FTN&ndash;2006&ndash;02, University of Utah, 
     February&nbsp;2006. 
-    Supercedes 
+    Supersedes 
       <a href="http://www.cs.utah.edu/flux/papers/ipassign-ftn2005-04-base.html">FTN&ndash;2005&ndash;04</a>.
     <p> 
 
@@ -264,7 +264,7 @@ Robert Ricci's talk at the INFORMS Annual Meeting, San Francisco, CA, November, 
 	Jonathon Duerig, Robert Ricci, John Byers, and Jay Lepreau.
 	Flux Technical Note FTN&ndash;2005&ndash;04, University of Utah,
 	July&nbsp;2005.
-	Superceded by 
+	Superseded by 
 	  <a href="http://www.cs.utah.edu/flux/papers/ipassign-ftn2006-02-base.html">FTN&ndash;2006&ndash;02</a>.
        <p>
 
@@ -319,7 +319,7 @@ Robert Ricci's talk at the INFORMS Annual Meeting, San Francisco, CA, November, 
 <li> <cite><a href="http://www.cs.utah.edu/flux/papers/frisbee-usenix03-base.html">
 	Fast, Scalable Disk Imaging with Frisbee</a></cite>,
 	Mike Hibler, Leigh Stoller, Jay Lepreau, Robert Ricci, Chad Barb.
-	In Proceeeding of the
+	In Proceedings of the
 	<a href='http://www.usenix.org/events/usenix03/'>2003 USENIX Annual Technical Conference</a>,
 	June 2003.
 	The <a href = "http://www.emulab.net/software.php3">Frisbee software</a> is open source and available.
@@ -344,7 +344,7 @@ Robert Ricci's talk at the INFORMS Annual Meeting, San Francisco, CA, November, 
 	An Integrated Experimental Environment for Distributed Systems and Networks</a></cite>,
 	by White, Lepreau, Stoller, Ricci, Guruprasad, Newbold, Hibler, Barb, and Joglekar,
  	appeared at <a href = "http://www.usenix.org/events/osdi02/">OSDI 2002</a>, December 2002.<br>
-	<b><a href="http://www.cs.utah.edu/flux/papers/netbed-osdi02.bib">BibTex entry you should use to cite Netbed/Emulab</a></b>
+	<b><a href="http://www.cs.utah.edu/flux/papers/netbed-osdi02.bib">BibTeX entry you should use to cite Netbed/Emulab</a></b>
 	<p>
 
 <li> <cite><a href="http://www.cs.utah.edu/flux/papers/barrier-hotnets1-base.html">
@@ -356,7 +356,7 @@ Robert Ricci's talk at the INFORMS Annual Meeting, San Francisco, CA, November, 
 	<p>
 
 <li> <cite>Netbed: An Integrated Experimental Environment</cite>,
-	White et al; SIGCOMM 2002 Poster Abstract, August 2002.
+	White et al.; SIGCOMM 2002 Poster Abstract, August 2002.
         (<a href="http://www.cs.utah.edu/flux/papers/netbed-sigcomm02/posterabs.pdf">PDF</a>,
          <a href="http://www.cs.utah.edu/flux/papers/netbed-sigcomm02/posterabs.ps">Postscript</a>)
 	<p>
@@ -364,7 +364,7 @@ Robert Ricci's talk at the INFORMS Annual Meeting, San Francisco, CA, November, 
 <li> <b>SOSP'01 Poster, November 2001.</b> 
         (<a href="http://www.cs.utah.edu/flux/testbed-docs/sosp01-poster/testbed-sosp-final-white.htm">HTML</a>,
          <a href="http://www.cs.utah.edu/flux/testbed-docs/sosp01-poster/sosp-final-white.ps">Postscript</a>,
-         <a href="http://www.cs.utah.edu/flux/testbed-docs/sosp01-poster/testbed-sosp-final-white.ppt">Powerpoint</a>)
+         <a href="http://www.cs.utah.edu/flux/testbed-docs/sosp01-poster/testbed-sosp-final-white.ppt">PowerPoint</a>)
 	<p>
 
 <li> <a href = "http://www.cs.utah.edu/flux/testbed-docs/glossy.pdf">
@@ -378,14 +378,14 @@ Robert Ricci's talk at the INFORMS Annual Meeting, San Francisco, CA, November, 
 <li> <b>emulab.net: An Emulation Testbed for Networks and Distributed Systems</b>,
 	full presentation at Intel, June 2001.
     (<a href="http://www.cs.utah.edu/flux/testbed-docs/testbed-intel-jun01.htm">HTML</a>,
-    <a href="http://www.cs.utah.edu/flux/testbed-docs/testbed-intel-jun01.ppt">Powerpoint</a>)
+    <a href="http://www.cs.utah.edu/flux/testbed-docs/testbed-intel-jun01.ppt">PowerPoint</a>)
     <p>
 
 <li> Utah CHPC Cluster workshop talk,
     February 2000,
     with lots of goofy pictures,
     in <a href="http://www.cs.utah.edu/flux/testbed-docs/testbed-chpc.ppt">
-    Powerpoint</a> and
+    PowerPoint</a> and
     <a href="http://www.cs.utah.edu/flux/testbed-docs/testbed-chpc/index.htm">
     HTML</a> formats.
     <p>
@@ -393,7 +393,7 @@ Robert Ricci's talk at the INFORMS Annual Meeting, San Francisco, CA, November, 
 <li> SOSP'99 Work-in-progress talk,
     December 1999,
     in <a href="http://www.cs.utah.edu/flux/testbed-docs/sosp99-wip.ppt">
-    Powerpoint</a> and
+    PowerPoint</a> and
     <a href="http://www.cs.utah.edu/flux/testbed-docs/sosp99-wip/index.htm">
     HTML</a> formats.
     <p>
@@ -401,7 +401,7 @@ Robert Ricci's talk at the INFORMS Annual Meeting, San Francisco, CA, November, 
 <li> SIGCOMM'99 New Research Session,
     September 1999,
     in <a href="http://www.cs.utah.edu/flux/testbed-docs/sigcomm99-wip.ppt">
-    Powerpoint</a> and
+    PowerPoint</a> and
     <a href="http://www.cs.utah.edu/flux/testbed-docs/sigcomm99-wip/index.htm">
     HTML</a> formats.
 </ul>
