Added CSET '10 paper.

--- a/www/pubs.html
+++ b/www/pubs.html
@@ -24,6 +24,18 @@
 <li>
      <img src="/new.gif" alt="&lt;NEW&gt;">
      <cite><a 
+        href="http://www.cs.utah.edu/flux/papers/tdls-cset10-base.html">
+	Trusted Disk Loading in the Emulab Network Testbed</a></cite>.
+     Cody Cutler, Mike Hibler, Eric Eide, and Robert Ricci.
+     In Proceedings of the
+	<a href="http://www.usenix.org/events/cset10/">Third Workshop on Cyber
+        Security Experimentation and Test&nbsp;(CSET)</a>,
+     Washington,&nbsp;DC,
+     August&nbsp;2010.
+     <p>
+
+<li>
+     <cite><a 
         href="http://www.cs.utah.edu/flux/papers/ipathemu-nsdi09-base.html">
 	Modeling and Emulation of Internet Paths</a></cite>.
      Pramod Sanaga, Jonathon Duerig, Robert Ricci, and Jay Lepreau.
@@ -36,7 +48,6 @@
      <p>
 
 <li>
-     <img src="/new.gif" alt="&lt;NEW&gt;">
      <cite><a 
         href="http://www.cs.utah.edu/flux/papers/checkpoint-eurosys09-base.html">
 	Transparent Checkpoints of Closed Distributed Systems in
@@ -63,7 +74,7 @@
 	Securing the Frisbee Multicast Disk Loader</a></cite>.
 	Robert Ricci and Jonathon Duerig.
      In Proceedings of the
-        <a href="http://www.usenix.org/events/usenix08/">2008 Workshop on
+        <a href="http://www.usenix.org/events/cset08/">2008 Workshop on
 	  Cyber Security Experimentation and Test</a>,
      San&nbsp;Jose,&nbsp;CA, July&nbsp;2008.
      <p>
