Added Archive '10 position paper.

--- a/www/pubs.html
+++ b/www/pubs.html
@@ -35,6 +35,20 @@
      <p>
 
 <li>
+     <img src="/new.gif" alt="&lt;NEW&gt;">
+     <cite><a 
+        href="http://www.cs.utah.edu/flux/papers/replayable-archive10-base.html">
+	Toward Replayable Research in Networking and Systems</a></cite>.
+     Eric Eide.
+     Position paper presented at
+	<a href="http://users.emulab.net/trac/archive10/">Archive&nbsp'10, the
+        NSF Workshop on Archiving Experiments to Raise Scientific
+        Standards</a>,
+     Salt&nbsp;Lake&nbsp;City,&nbsp;UT,
+     May&nbsp;2010.
+     <p>
+
+<li>
      <cite><a 
         href="http://www.cs.utah.edu/flux/papers/ipathemu-nsdi09-base.html">
 	Modeling and Emulation of Internet Paths</a></cite>.
